# auto-ambient-music

./: LICENSE  README.md  manage.py  pyproject.toml
Utils-Files/: auto-ambient-music.service
Utils-Files/systemd/user/: auto-ambient-music.service
autoAmbientMusic/: asgi.py  settings.py  urls.py  wsgi.py
controle/: admin.py  apps.py  choices.py  models.py  player.py
controle/migrations/: 0001_initial.py
